# cdma

./: CMakeLists.txt  README.en.md  README.md  cdma_u_cmd.c  cdma_u_cmd.h  cdma_u_common.c  cdma_u_common.h  cdma_u_context.c  cdma_u_context.h  cdma_u_db.c  cdma_u_db.h  cdma_u_device.c  cdma_u_device.h  cdma_u_event.c  cdma_u_event.h  cdma_u_jfc.c  cdma_u_jfc.h  cdma_u_jfs.c  cdma_u_jfs.h  cdma_u_lib.c  cdma_u_log.c  cdma_u_log.h  cdma_u_queue.c  cdma_u_queue.h  cdma_u_segment.c  cdma_u_segment.h  cdma_u_tp.c  cdma_u_tp.h  cdma_u_types.h
.本项目已经正式迁移至 AtomGit 平台/: README.md
doc/: CDMA_API.md
include/: cdma_u_lib.h
kernel_headers/: cdma_abi.h
